Prevent flickering of map controls on quick swipes

--- a/source/styles/modules/checkins/map.styl
+++ b/source/styles/modules/checkins/map.styl
@@ -36,7 +36,7 @@
 
 	.leaflet-control
 		box-shadow none
-		transition opacity 0.1s linear
+		transition opacity 0.1s linear 0.25s
 		&:not(.leaflet-control-zoom)
 			border none
 			a
